RESOLVED FIXED171669
CrashTracer: [USER] com.apple.WebKit.WebContent.Development at com.apple.WebCore: WebCore::commonVMSlow + 57
https://bugs.webkit.org/show_bug.cgi?id=171669
Summary CrashTracer: [USER] com.apple.WebKit.WebContent.Development at com.apple.WebC...
Blaze Burg
Reported 2017-05-04 09:52:03 PDT
Triggered by safaridriver's 'AutomaticInspection' capability after recent changes to add the interrupt dispatcher.
Attachments
Patch (2.70 KB, patch)
2017-05-04 09:58 PDT, Blaze Burg
mark.lam: review+
Blaze Burg
Comment 1 2017-05-04 09:52:22 PDT
Blaze Burg
Comment 2 2017-05-04 09:58:10 PDT
Mark Lam
Comment 3 2017-05-04 10:07:52 PDT
Comment on attachment 309058 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=309058&action=review r=me with suggestion for improvement. > Source/WebKit2/WebProcess/WebPage/WebInspectorInterruptDispatcher.cpp:59 > + if (!WebCore::g_commonVMOrNull) While the global can be accessed directly (I suspect just for linkage purposes), I prefer it if you can introduce a WebCore::commonVMOrNull() inline function in CommonVM.h, and use that instead. I prefer that we don't encourage use of direct access to a global var.
Blaze Burg
Comment 4 2017-05-04 11:11:54 PDT
(In reply to Mark Lam from comment #3) > Comment on attachment 309058 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=309058&action=review > > r=me with suggestion for improvement. > > > Source/WebKit2/WebProcess/WebPage/WebInspectorInterruptDispatcher.cpp:59 > > + if (!WebCore::g_commonVMOrNull) > > While the global can be accessed directly (I suspect just for linkage > purposes), I prefer it if you can introduce a WebCore::commonVMOrNull() > inline function in CommonVM.h, and use that instead. I prefer that we don't > encourage use of direct access to a global var. OK
Blaze Burg
Comment 5 2017-05-05 12:44:53 PDT
Note You need to log in before you can comment on or make changes to this bug.