Source/WebCore/bindings/js/CommonVM.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 Apple Inc. All rights reserved.
+ * Copyright (C) 2016-2017 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -36,6 +36,11 @@ namespace WebCore {
 WEBCORE_EXPORT extern JSC::VM* g_commonVMOrNull;
 
 WEBCORE_EXPORT JSC::VM& commonVMSlow();
+
+inline JSC::VM* commonVMOrNull()
+{
+    return g_commonVMOrNull;
+}
 
 inline JSC::VM& commonVM()
 {
